crates/kernel/tests/table/snapshots/main__table__router__a_queued_track_plays_before_the_playlists_own_next.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 414
expression: "walked(model, messages)"
---
[
    (
        Browse(
            EnqueueTrack(
                Index(2),
            ),
        ),
        One(
            Animate(
                QueueChanged,
            ),
        ),
        Playing {
            track: Track {
                path: "/tmp/track0.flac",
                duration: Some(
                    100s,
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track0.flac",
                tagging: Read,
            },
            head: Playhead {
                offset: 0ns,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preload: None,
        },
        None,
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [
            Index(2),
        ],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            preload_lead: 10s,
            output: Ready,
        },
        None,
    ),
    (
        Audio(
            Ended,
        ),
        Batch(
            [
                Audio(
                    Load {
                        path: "/tmp/track2.flac",
                        gain: None,
                        revision: Revision(
                            1,
                        ),
                    },
                ),
                Audio(
                    Volume(
                        Percent(
                            50,
                        ),
                    ),
                ),
                Library(
                    AppendHistory {
                        track: Track {
                            path: "/tmp/track2.flac",
                            duration: Some(
                                100s,
                            ),
                            tags: Tags {
                                title: None,
                                artist: None,
                                album: None,
                                album_artist: None,
                                date: None,
                                genre: None,
                                track: None,
                                track_total: None,
                                disc: None,
                                composer: None,
                                comment: None,
                                lyrics: None,
                            },
                            audio_format: AudioFormat {
                                format: None,
                                bitrate_kbps: None,
                                sample_rate_hz: None,
                                bits_per_sample: None,
                                channels: None,
                                replay_gain: None,
                            },
                            display: "track2.flac",
                            tagging: Read,
                        },
                        at: UnixSeconds(
                            0,
                        ),
                    },
                ),
                System(
                    NowPlaying(
                        Track {
                            title: "track2",
                            artist: None,
                            album: None,
                            duration: 100s,
                            path: "/tmp/track2.flac",
                        },
                    ),
                ),
                Audio(
                    Pause(
                        Playing,
                    ),
                ),
                System(
                    PlaybackState(
                        Playing,
                    ),
                ),
                Animate(
                    TrackChanged,
                ),
                Animate(
                    PlaybackChanged(
                        Play,
                    ),
                ),
            ],
        ),
        Loading {
            track: Track {
                path: "/tmp/track2.flac",
                duration: Some(
                    100s,
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track2.flac",
                tagging: Read,
            },
            at: 0ns,
        },
        None,
        Cursor {
            index: 2,
            len: 3,
        },
        Cursor {
            index: 2,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            preload_lead: 10s,
            output: Ready,
        },
        None,
    ),
]
