crates/kernel/tests/table/snapshots/main__table__router__a_second_ab_press_before_the_start_waits.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Playback(
            AbMark,
        ),
        [],
        Playing {
            track: Track {
                source: Local(
                    "/tmp/track0.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track_number: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    decibels: None,
                },
                display: "track0.flac",
                tagging: Tagged(
                    100s,
                ),
            },
            playhead: Playhead {
                offset: 10s,
                started_at: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preloaded: None,
        },
        None,
        Cursor {
            index: 0,
            len: 1,
        },
        Cursor {
            index: 0,
            len: 1,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: Some(
                StartMarked(
                    10s,
                ),
            ),
            output_status: Ready,
        },
        [],
    ),
    (
        Audio(
            PositionReported(
                5s,
            ),
        ),
        [
            Macos(
                SetPosition(
                    5s,
                ),
            ),
        ],
        Playing {
            track: Track {
                source: Local(
                    "/tmp/track0.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track_number: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    decibels: None,
                },
                display: "track0.flac",
                tagging: Tagged(
                    100s,
                ),
            },
            playhead: Playhead {
                offset: 5s,
                started_at: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preloaded: None,
        },
        None,
        Cursor {
            index: 0,
            len: 1,
        },
        Cursor {
            index: 0,
            len: 1,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: Some(
                StartMarked(
                    10s,
                ),
            ),
            output_status: Ready,
        },
        [],
    ),
    (
        Playback(
            AbMark,
        ),
        [],
        Playing {
            track: Track {
                source: Local(
                    "/tmp/track0.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track_number: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    decibels: None,
                },
                display: "track0.flac",
                tagging: Tagged(
                    100s,
                ),
            },
            playhead: Playhead {
                offset: 5s,
                started_at: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preloaded: None,
        },
        None,
        Cursor {
            index: 0,
            len: 1,
        },
        Cursor {
            index: 0,
            len: 1,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: Some(
                StartMarked(
                    10s,
                ),
            ),
            output_status: Ready,
        },
        [],
    ),
]
