crates/kernel/tests/table/snapshots/main__table__router__a_second_ab_press_past_the_start_closes_the_loop.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Playback(
            AbMark,
        ),
        [],
        Playing {
            track: Track {
                source: Local(
                    "/tmp/track0.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track0.flac",
                tagging: Read(
                    100s,
                ),
            },
            head: Playhead {
                offset: 10s,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preload: None,
        },
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 1,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: Some(
                AOnly(
                    10s,
                ),
            ),
            output: Ready,
        },
        [],
    ),
    (
        Audio(
            Playhead(
                20s,
            ),
        ),
        [
            Macos(
                SetPosition(
                    20s,
                ),
            ),
        ],
        Playing {
            track: Track {
                source: Local(
                    "/tmp/track0.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track0.flac",
                tagging: Read(
                    100s,
                ),
            },
            head: Playhead {
                offset: 20s,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preload: None,
        },
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 1,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: Some(
                AOnly(
                    10s,
                ),
            ),
            output: Ready,
        },
        [],
    ),
    (
        Playback(
            AbMark,
        ),
        [],
        Playing {
            track: Track {
                source: Local(
                    "/tmp/track0.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track0.flac",
                tagging: Read(
                    100s,
                ),
            },
            head: Playhead {
                offset: 20s,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preload: None,
        },
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 1,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: Some(
                Full {
                    a: 10s,
                    b: 20s,
                },
            ),
            output: Ready,
        },
        [],
    ),
]
